# -bung

./: first_line.txt  run_cmake.sh
homework_2/: CMakeLists.txt  grades.c
libraries/: CMakeLists.txt  run_cmake.sh
libraries/include/: function.h  print.h
libraries/src/: function.c  main.c  print.c
